--- a/bs-feladatok-sitebuilding/style.css
+++ b/bs-feladatok-sitebuilding/style.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100&family=Lato:wght@100&family=Mulish:wght@200&display=swap');
 
-.headline {
+.catamaran {
     font-family: "Catamaran", "Helvetica", "Arial", sans-serif;
 }
 
-.headline {
+.lato {
     font-family: "Lato", "Helvetica", "Arial", sans-serif;
 }
 
-.headline {
+.muli {
     font-family: "Muli", "Helvetica", "Arial", sans-serif;
 }
 
-.headline {
-    font-family: "Muli", "Helvetica", "Arial", sans-serif;
+.header-background {
+    background-image: url('./img/bg-pattern.png'), linear-gradient(85deg, #d72631, #7c4394);
 }
 
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: rgba(255,255,255);
+}
