--- a/bs-feladatok-sitebuilding/style.css
+++ b/bs-feladatok-sitebuilding/style.css
@@ -19,3 +19,7 @@
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: rgba(255,255,255);
 }
+
+.header-p {
+    font-size: 35px;
+}
