--- a/bs-feladatok-sitebuilding/style.css
+++ b/bs-feladatok-sitebuilding/style.css
@@ -12,6 +12,8 @@
     font-family: "Muli", "Helvetica", "Arial", sans-serif;
 }
 
+/*Header*/
+
 .header-background {
     background-image: url('./img/bg-pattern.png'), linear-gradient(85deg, #d72631, #7c4394);
 }
@@ -23,3 +25,4 @@
 .header-p {
     font-size: 35px;
 }
+
