--- a/bs-feladatok-sitebuilding/style.css
+++ b/bs-feladatok-sitebuilding/style.css
@@ -22,7 +22,7 @@
     color: rgba(255,255,255);
 }
 
-.header-p {
+.header-p-first {
     font-size: 3rem;
 }
 
@@ -42,6 +42,7 @@
     font-size: 0.95rem;
 }
 
+
 /*Second section*/
 
 .icons {
@@ -54,8 +55,8 @@
 }
 
 #phone2 {
-    top: -2.7rem;
-    left: 10.8rem;
+    top: -2.2rem;
+    left: 10.9rem;
 }
 
 #demo-page2 {
@@ -64,13 +65,22 @@
 
 /*Third section*/
 
-.second-sec-background {
-    background-image: url('./img/bg-cta.jpg');
-    background-size: cover;
-    filter: brightness(50%);
+.third-sec-background {
+    background-image: url('./img/bg-cta.jpg') ;
+    background-position: center;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
+}
+
+.header-p-second {
+    font-size: 5rem;
 }
 
 /*Fourth section*/
+
+.fourth-sec-a:hover{
+    text-decoration: none;
+    cursor: pointer;
+}
 
 .red-heart {
     color: rgb(221, 76, 57);
@@ -81,10 +91,10 @@
 }
 
 .socials-icons {
-  top: 1.3rem;
-  font-size: 2rem;
-  color: white;
-  position: absolute;
+    top: 1.3rem;
+    font-size: 2rem;
+    color: white;
+    position: absolute;
 }
 
 .icon-container {
@@ -95,7 +105,7 @@
 }
 
 .twitter-container {
-  background-color: rgb(29, 161, 243);
+  background-color: rgba(29, 161, 243);
 }
 
 .facebook-container {
@@ -118,8 +128,24 @@
   right: 1rem;
 }
 
+.footer-link:hover {
+    text-decoration: none;
+    cursor: pointer;
+    color: #fdcc52;
+}
+
+.footer-link {
+    color: grey;
+}
+
 /*Other*/
 
 .yellow-background {
     background-color: rgb(255, 204, 81);
 }
+
+.btn-hover:hover {
+    background-color: #fdcc52;
+    border-color: #fdcc52;
+    transition: background-color .3s, border-color .3s;
+} 
